<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_helpdesk"
        android:title="@string/menu_helpdesk"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_signin"
        android:title="@string/menu_signin"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_signout"
        android:title="@string/menu_signout"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/menu_change_password"
        android:title="@string/menu_change_password"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
