<?xml version="1.0" encoding="utf-8"?>
<com.kth.baasio.sample.ui.main.HeaderLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageProfile"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/content_description_profile_image"
            android:src="@drawable/person_image_empty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:linksClickable="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:linksClickable="true"
                android:textSize="10sp" />
            
            <TextView
                android:id="@+id/textCreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:linksClickable="true"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/textModified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:linksClickable="true"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:linksClickable="true"
            android:maxLines="@integer/line_number_2"
            android:minLines="1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textBody"
            android:layout_gravity="right"
            android:layout_marginTop="-17dp"
            android:padding="15dp"
            android:text="@string/label_expand" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/common_thread_between_line"
        android:contentDescription="@string/content_description_separator" />

</com.kth.baasio.sample.ui.main.HeaderLayout>